[gd_scene load_steps=3 format=3 uid="uid://dpedb0dmgw6kr"]

[ext_resource type="Script" path="res://screens/sub_menus/games_menu/level_selector/level_card/level_card.gd" id="1_w6igs"]
[ext_resource type="Texture2D" uid="uid://d14ww1o5o2o0v" path="res://screens/sub_menus/games_menu/level_selector/level_card/assets/empty_card_img.png" id="2_ehwp3"]

[node name="LevelCard" type="CenterContainer"]
custom_minimum_size = Vector2(412.5, 555)
offset_right = 412.5
offset_bottom = 555.0
script = ExtResource("1_w6igs")

[node name="Button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(275, 370)
layout_mode = 2
mouse_filter = 1
mouse_force_pass_scroll_events = false
texture_normal = ExtResource("2_ehwp3")
stretch_mode = 0

[node name="LevelThumbnail" type="TextureRect" parent="Button"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.484
anchor_top = 0.284
anchor_right = 0.484
anchor_bottom = 0.284
offset_left = -97.1
offset_top = -57.08
offset_right = 96.9
offset_bottom = 56.92
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(97, 57)

[node name="TitleLabel" type="Label" parent="Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.484
anchor_top = 0.078
anchor_right = 0.484
anchor_bottom = 0.078
offset_left = -98.6
offset_top = -42.36
offset_right = 98.4
offset_bottom = 42.64
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(98.6, 42.4)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 59
text = "Level 1"

[node name="RewardThumbnail" type="TextureRect" parent="Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.487
anchor_top = 0.707
anchor_right = 0.487
anchor_bottom = 0.707
offset_left = -88.925
offset_top = -72.59
offset_right = 89.075
offset_bottom = 72.41
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(89, 72)

[node name="EnemyThumbnail" type="TextureRect" parent="Button"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.484
anchor_top = 0.281
anchor_right = 0.484
anchor_bottom = 0.281
offset_left = -94.1
offset_top = -54.97
offset_right = 93.9
offset_bottom = 55.03
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(94, 55)
